--- a/package.json
+++ b/package.json
@@ -4,15 +4,37 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.17",
+    "expo-asset": "~9.0.2",
+    "expo-camera": "~14.1.3",
+    "expo-face-detector": "~12.6.1",
+    "expo-font": "~11.10.3",
+    "expo-notifications": "~0.27.8",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
+    "i18next": "^23.11.5",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-i18next": "^14.1.2",
+    "react-native": "0.73.6",
+    "react-native-circular-progress": "^1.4.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "14.1.0",
+    "lottie-react-native": "6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
